quotation marks from different unicode versin (spanish, etc..) need to be handle - need to implement multi-paragraph quote extraction

--- a/scripts/nlp_pre_processing/nlp_preprocessing_test_nb.ipynb
+++ b/scripts/nlp_pre_processing/nlp_preprocessing_test_nb.ipynb
@@ -307,245 +307,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['3.3.16',\n",
-       " '3.3.19',\n",
-       " '4.2.0',\n",
-       " '4.2.13',\n",
-       " '4.3.0',\n",
-       " '4.3.17',\n",
-       " '5.2.0',\n",
-       " '5.3.28',\n",
-       " '6.1.14',\n",
-       " '6.3.14',\n",
-       " '13.0.0',\n",
-       " '13.0.36',\n",
-       " '14.2.0',\n",
-       " '14.3.13',\n",
-       " '20.0.4']"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "clean_tokens['content']['quote_identifiers']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import re"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ptrn = re.compile('^[0-9]*.[0-9]*')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from itertools import zip_longest"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "def grouper(iterable, n, fillvalue=None):\n",
-    "    args = [iter(iterable)] * n\n",
-    "    return zip_longest(*args, fillvalue=fillvalue)\n",
-    "\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def extract_indexes(quote_index_string):\n",
-    "    #Takes int he Quote identifier which is a string in format\n",
-    "    # 'paragraph_index.sentence_index.token_index'\n",
-    "    #Return a tuple of string 'paragraph_index.sentence_index' and int token_index\n",
-    "    par_sent = re.findall(ptrn,quote_index_string)[0]\n",
-    "    token_no = quote_index_string.replace('{}.'.format(par_sent), '')\n",
-    "    return par_sent, int(token_no)\n",
-    "\n",
-    "\n",
-    "def get_par_sentence_displace(open, close):\n",
-    "    open_par, open_sent = [int(x) for x in open.split('.')]\n",
-    "    close_par, close_sent = [int(x) for x in close.split('.')]\n",
-    "    par_dis = close_par - open_par\n",
-    "    sent_dis = close_sent - open_sent\n",
-    "\n",
-    "    return par_dis, sent_dis"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "blocks = list(grouper(clean_tokens['content']['quote_identifiers'],2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['3.3.16',\n",
-       " '3.3.19',\n",
-       " '4.2.0',\n",
-       " '4.2.13',\n",
-       " '4.3.0',\n",
-       " '4.3.17',\n",
-       " '5.2.0',\n",
-       " '5.3.28',\n",
-       " '6.1.14',\n",
-       " '6.3.14',\n",
-       " '13.0.0',\n",
-       " '13.0.36',\n",
-       " '14.2.0',\n",
-       " '14.3.13',\n",
-       " '20.0.4']"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "clean_tokens['content']['quote_identifiers']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['``', 'Science', 'Advances', \"''\"]\n",
+      "`` Science Advances ''\n",
       "\n",
-      "['``', 'Ferroelectric', 'means', 'that', 'the', 'material', 'has', 'spatially', 'separated', 'positive', 'and', 'negative', 'charges', \"''\"]\n",
+      "`` Ferroelectric means that the material has spatially separated positive and negative charges ''\n",
       "\n",
-      "['``', 'The', 'charge', 'separation', 'leads', 'to', 'an', 'asymmetric', 'structure', 'that', 'enables', 'electricity', 'to', 'be', 'generated', 'from', 'light', \"''\"]\n",
+      "`` The charge separation leads to an asymmetric structure that enables electricity to be generated from light ''\n",
       "\n",
-      "['``', 'The', 'interaction', 'between', 'the', 'lattice', 'layers', 'appears', 'to', 'lead', 'to', 'a', 'much', 'higher', 'permittivity', '-', 'in', 'other', 'words', 'the', 'electrons', 'are', 'able', 'to', 'flow', 'much', 'more', 'easily', 'due', 'to', 'the', 'excitation', 'by', 'the', 'light', 'photons', \"''\"]\n",
+      "`` The important thing here is that a ferroelectric material is alternated with a paraelectric material . Although the latter does not have separated charges it can become ferroelectric under certain conditions for example at low temperatures or when its chemical structure is slightly modified ''\n",
+      "\n",
+      "`` We embedded the barium titanate between strontium titanate and calcium titanate . This was achieved by vaporising the crystals with a high-power laser and redepositing them on carrier substrates . This produced a material made of 500 layers that is about 200 nanometres thick ''\n",
+      "\n",
+      "`` The interaction between the lattice layers appears to lead to a much higher permittivity - in other words the electrons are able to flow much more easily due to the excitation by the light photons ''\n",
+      "\n",
+      "`` The layer structure shows a higher yield in all temperature ranges than pure ferroelectrics . The crystals are also significantly more durable and do not require special packaging ''\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "for blcks in blocks:\n",
-    "    if blcks[0] != None and blcks[1] != None:\n",
-    "        open_parsent, open_token = extract_indexes(blcks[0])\n",
-    "        close_parsent, close_token = extract_indexes(blcks[1])\n",
-    "        #print(blcks)\n",
-    "        d_par, d_sent = (get_par_sentence_displace(open_parsent,close_parsent))\n",
-    "        #Single sentence\n",
-    "        if d_par == 0 and d_sent == 0:\n",
-    "            sentence = clean_tokens['content']['clean_token_map'][open_parsent]\n",
-    "            #print(blcks)\n",
-    "            #print(sentence)\n",
-    "            print(sentence[open_token:close_token +1])\n",
-    "            print()\n",
-    "        #Multi sentence\n",
-    "        elif d_par == 0 and d_sent > 0:\n",
-    "            pass\n",
-    "        # Multi paragraph\n",
-    "        else:\n",
-    "            pass\n",
+    "\n",
     "    \n",
     "\n",
     "    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0, 1)"
-      ]
-     },
-     "execution_count": 110,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "open_parsent\n",
-    "close_parsent\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test = ['Their', 'findings', 'which', 'could', 'significantly', 'increase', 'the', 'efficiency', 'of', 'solar', 'cells', 'were', 'published', 'in', 'the', 'journal', '``', 'Science', 'Advances', \"''\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Science', 'Advances']"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
